support for DIQAimport

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@ Enhanced Retrieval extension ChangeLog
 VERSION 1.9.3
 
 	- Refactoring extension structure. Basically using composer autoload.
+	- Support for DIQAimport (direct download of documents in search interface)
 
 VERSION 1.9.2
 
