--- a/INSTALL
+++ b/INSTALL
@@ -1,7 +1,8 @@
 == Enhanced Retrieval Extension 2.0 ==
 
 === Requirements ===
-* MediaWiki 1.27.x 
+* PHP 7
+* MediaWiki 1.31.x 
 * SMW 2.5.x
 * Apache SOLR server v6.6+ 
 
