--- a/INSTALL
+++ b/INSTALL
@@ -23,24 +23,23 @@
 
 * Create a file proxy/env.php with the following content: (adjust the values of course)
 
------------------------------------------------------------------------------------
-<?php
-	global $SOLRhost, $SOLRport, $SOLRuser, $SOLRpass, $SOLRcore;
-	$SOLRhost = 'localhost';
-	$SOLRport = 8983;
-	$SOLRuser = '';
-	$SOLRpass = '';
-	$SOLRcore = 'mw';
+	-----------------------------------------------------------------------------------
+	<?php
+		global $SOLRhost, $SOLRport, $SOLRuser, $SOLRpass, $SOLRcore;
+		$SOLRhost = 'localhost';
+		$SOLRport = 8983;
+		$SOLRuser = '';
+		$SOLRpass = '';
+		$SOLRcore = 'mw';
 
-	global $wgServer, $wgScriptPath, $wgDBname;
-	$wgServer = "http://wimawiki.local";
-	$wgScriptPath = "/mediawiki";
-	$wgDBname = 'wima_wiki';
-	
------------------------------------------------------------------------------------
+		global $wgServer, $wgScriptPath, $wgDBname;
+		$wgServer = "http://wimawiki.local";
+		$wgScriptPath = "/mediawiki";
+		$wgDBname = 'wima_wiki';
+	-----------------------------------------------------------------------------------
 
 	Note: SOLRuser / SOLRpass / SOLRcore are optional, default is empty. 
-		  Default SOLR port is 8983. Default host is "localhost"
+		Default SOLR port is 8983. Default host is "localhost"
 
 * Create the initial index:
 	php {wiki-path}/extensions/EnhancedRetrieval/maintenance/updateSOLR.php -v
@@ -54,31 +53,21 @@ That's it.
 
 === Troubleshooting ===
 
-SSL users: Sometimes servers are configured to not allow *local* HTTPS requests but only HTTP.
-		   In this case set in proxy/env.php 
-		   
-		   $wgServerHTTP = http://....
-		   $wgHTTPAuthForLocalProxies = true;
+==== SSL users ==== 
+Sometimes servers are configured to not allow *local* HTTPS requests but only HTTP.
+In this case define this in env.php 
+	$wgServerHTTP = http://....
+	$wgHTTPAuthForLocalProxies = true;
 
------
-HTTP Auth: If the wiki is protected by Basic Auth, set $fsgHTTPAuth
+==== HTTP Auth ==== 
+If the wiki is protected by Basic Auth, define this in env.php
+	$fsgHTTPAuth = "user:pass";
 
-			$fsgHTTPAuth = "user:pass";
-
------
-Permission denied error when accessing SOLR via the Wiki-Proxy: 
-
+==== Permission denied when accessing SOLR via the Wiki-Proxy ==== 
 Replace {$WIKIHOST_AND_PATH} and try to access this URL:
-http://{$WIKIHOST_AND_PATH}/extensions/EnhancedRetrieval/src/FacetedSearch/solrproxy.php?q=smwh_search_field%3A(%2B*%20)&facet=true&facet.field=smwh_categories&facet.field=smwh_attributes&facet.field=smwh_properties&facet.field=smwh_namespace_id&facet.mincount=1&json.nl=map&fl=smwh__MDAT_datevalue_l%2Csmwh_categories%2Csmwh_directcategories%2Csmwh_attributes%2Csmwh_properties%2Cid%2Csmwh_title%2Csmwh_namespace_id&hl=true&hl.fl=smwh_search_field&hl.simple.pre=%3Cb%3E&hl.simple.post=%3C%2Fb%3E&hl.fragsize=250&sort=score%20desc&rows=12&wt=json&json.wrf=_jqjsp&_1585311900675=
-
-If it yields something like (1) as error message, then you probably cannot make HTTP connections via Apache.
-
-	“Failed to connect to ::1: Permission denied”  (1)
-	
+	http://{$WIKIHOST_AND_PATH}/extensions/EnhancedRetrieval/src/FacetedSearch/solrproxy.php?q=smwh_search_field%3A(%2B*%20)&facet=true&facet.field=smwh_categories&facet.field=smwh_attributes&facet.field=smwh_properties&facet.field=smwh_namespace_id&facet.mincount=1&json.nl=map&fl=smwh__MDAT_datevalue_l%2Csmwh_categories%2Csmwh_directcategories%2Csmwh_attributes%2Csmwh_properties%2Cid%2Csmwh_title%2Csmwh_namespace_id&hl=true&hl.fl=smwh_search_field&hl.simple.pre=%3Cb%3E&hl.simple.post=%3C%2Fb%3E&hl.fragsize=250&sort=score%20desc&rows=12&wt=json&json.wrf=_jqjsp&_1585311900675=
+If it yields something like this as error message, then you probably cannot make HTTP connections via Apache.
+	"Failed to connect to ::1: Permission denied"
 To fix it, run the following command on the shell:
+	sudo setsebool httpd_can_network_connect 1
 
-  sudo setsebool httpd_can_network_connect 1
-	 
-	
-	 
-			
