--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 Enhanced Retrieval extension ChangeLog
 ======================================
+VERSION 2.2
+	- Support for promoting and demoting search results visually
+	- SOLR field names with non-ascii characters are now properly escaped
+	  Make sure to re-index your wiki when updating from an earlier version!
+	
 VERSION 2.1.8
 	- Fix: Race condition on loading of search page
 	
